syntax = "proto3";

import "signature.proto";
import "message.proto";
package pb;

message Block {
    BlockHead head = 1;
    pb.Signature signature = 2;
    repeated bytes message_hashes = 3;
    repeated pb.Message messages = 4;
}

message BlockHead {
    int64 version = 1;
    int64 chain_id = 2;
    int64 height = 3;
    int64 time = 4;
    bytes parent_hash = 5;
    bytes message_merkle_hash = 6;
    bytes public_key = 7;
}
